-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: Index Maintenance
-
None
-
Fully Compatible
-
ALL
-
v4.4
-
Execution Team 2020-03-09
-
None
-
None
-
None
-
None
-
None
-
None
-
None
IndexBuildsCoordinator::_abortDatabaseIndexBuilds() needs to be fixed to use .find() on the map rather than operator[], which default constructs an element if it isn't there already. The code erroneously assumes this behavior does not happen.