SERVER-46609 use .find instead of operator[] in _abortDatabaseIndexBuilds